--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>2.28</version>
         </dependency>
+        
+        <dependency>  
+            <groupId>com.googlecode.json-simple</groupId>  
+            <artifactId>json-simple</artifactId>  
+            <version>1.1</version>  
+        </dependency>  
 
         <!-- pour le format XML -->
         <dependency>
